2011-11-11  Martin Rudalics  <rudalics@gmx.at>

	* window.el (windows-with-parameter): Remove unused function.
	(windows-at-side): Rename to window-at-side-list.
	(window-check, window-atom-check, window-atom-check-1)
	(window-side-check, window-size-ignore, window-size-fixed-1)
	(window-in-direction-2): Prefix with "window--".
	(window-tree-1): Rename to window--subtree, fix doc-string.

2011-11-11  Glenn Morris  <rgm@gnu.org>

	* subr.el (eval-after-load): If FILE is already loaded,
	evaluate FORM before it gets wrapped in more stuff.  (Bug#10009)

2011-11-10  Glenn Morris  <rgm@gnu.org>

	* vc/vc-svn.el (vc-svn-create-repo, vc-svn-modify-change-comment):
	Call svn via vc-svn-command rather than vc-do-command.
	(vc-svn-command): Add --non-interactive.  (Bug#9993)
	(vc-svn-update, vc-svn-merge-news): No need for --non-interactive.

	* emacs-lisp/bytecomp.el (byte-compile-interactive-only-functions):
	Add toggle-read-only.  (Bug#7292)
	* files.el (toggle-read-only): Mention that it should only
	be used interactively.  (Bug#10006)

2011-11-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/compile.el (compilation-error-regexp-alist-alist):
	Adjust regexp for OCaml warnings.

	* electric.el (electric-pair-post-self-insert-function): Let user
	turn it off buffer-locally (bug#9932).

	* progmodes/python.el (python-beginning-of-statement):
	Rewrite (bug#2703).

	* progmodes/compile.el: Better handle TABs (bug#9749).
	(compilation-internal-error-properties)
	(compilation-next-error-function): Obey the target buffer's
	compilation-error-screen-columns.

2011-11-09  Juanma Barranquero  <lekktu@gmail.com>

	* progmodes/meta-mode.el: Remove obsolete comments.
	(meta-right-comment-regexp, meta-ignore-comment-regexp):
	Fix typos in docstrings.

2011-11-09  Martin Rudalics  <rudalics@gmx.at>

	* window.el (window-size-fixed-p): Rewrite doc-string.
	(window-resizable-p): Rename to window--resizable-p.  Update callers.